(Squash) Resolvendo Issues do sonar | Remoção do workflow do sonar para usar ele automaticamente (#237)
* fix: renomeia logger para customLogger na classe GlobalExceptionHandler

* refactor: simplifica a coleta de listas em DespesaController e ReceitaController

* fix: corrige a formatação de datas para o padrão "Mês Ano" em português nas classes DespesaServiceImpl e ReceitaServiceImpl

* fix: atualiza exceções de não encontrado para usar UUID diretamente nas classes DespesaServiceImpl e ReceitaServiceImpl

* fix: substitui exceções de dados inválidos por MissingUuidException nas classes DespesaServiceImpl e ReceitaServiceImpl

* fix: substitui string literal "Authorization" por constante AUTHORIZATION_HEADER nas classes DespesaController e ReceitaController

* fix: substitui string literal "Bearer " por constante BEARER_PREFIX nas classes DespesaController e ReceitaController

* fix: atualiza o sonar token para ser um secrect do github

* build: adiciona o plugin sonar-maven-plugin na configuração do pom.xml

* Revert "build: adiciona o plugin sonar-maven-plugin na configuração do pom.xml"

This reverts commit 941c9af7e7a677d997601cb1a6dda3f2eeb71946.

* build: adiciona versão estável do sonar-maven-plugin no pom.xml

* build: adiciona organização ao comando do sonar no workflow do GitHub Actions

* build: atualiza o workflow do GitHub Actions para análise no SonarCloud com JDK 11 pra ver se funciona

* build: atualiza a versão do JDK para 17 no workflow do GitHub Actions

* build: adiciona perfil de teste ao comando do sonar no workflow do GitHub Actions

* build: remove sonar organization and host URL from pom.xml

* build: adiciona URL do SonarCloud ao pom.xml

* build: altera a ordem do run do sonar para tentar resolver

* build: adiciona organização do SonarCloud ao pom.xml

* build: remove SonarCloud workflow

* build: adiciona o SonarQube workflow e define o pom

* build: remove SonarQube workflow

* build: remove SonarCloud organization e host URL do pom.xm